se agrego display block a p

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -16,6 +16,7 @@
     background-color: #AF7AC5 ;
     /*width: 90%;*/
     height: 215px;
+    display: block;
     margin-right: auto;
     font-weight: 550;
     margin-left: auto;
